--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Maheshwari Matrimony Form</h2>
+    <h2>Cadidate Caption Generator</h2>
     <p class="note"><span class="required">*</span> marked fields are mandatory</p>
 
     <form id="matrimonyForm">
@@ -119,7 +119,7 @@
       <input type="text" id="height" required placeholder="e.g., 5'6">
 
       <label><span class="required">*</span>Education:</label>
-      <input type="text" id="education" required placeholder="e.g., MBA, B.Tech" style="text-transform: capitalize">
+      <input type="text" id="education" required placeholder="e.g., MBA, B.Tech,Docter" style="text-transform: capitalize">
 
       <label><span class="required">*</span>Occupation:</label>
       <input type="text" id="occupation" required placeholder="e.g., Software Engineer" style="text-transform: capitalize">
@@ -160,7 +160,7 @@
       <input type="text" id="contact1Name" required placeholder="e.g., Mr. Rajesh Maheshwari" style="text-transform: capitalize">
 
       <label><span class="required">*</span>Relation:</label>
-      <input type="text" id="contact1Relation" required placeholder="e.g., Father,Brother,Mamaji,Etc." style="text-transform: capitalize">
+      <input type="text" id="contact1Relation" required placeholder="e.g., Father,Brother,Mama,Etc." style="text-transform: capitalize">
 
       <label><span class="required">*</span>Mobile Number:</label>
       <input type="number" id="contact1Mobile" required placeholder="e.g., 9876543210">
@@ -185,6 +185,21 @@
     const form = document.getElementById('matrimonyForm');
     const captionDiv = document.getElementById('caption');
     const copyBtn = document.getElementById('copyBtn');
+	function formatDate(input) {
+    const date = new Date(input);
+    const day = String(date.getDate()).padStart(2, '0');
+    const month = String(date.getMonth() + 1).padStart(2, '0'); // Months are 0-based
+    const year = date.getFullYear();
+    return `${day}/${month}/${year}`;
+  }
+
+  function formatTime(input) {
+    const [hourStr, minute] = input.split(":");
+    const hour = parseInt(hourStr);
+    const ampm = hour >= 12 ? "PM" : "AM";
+    const hour12 = hour % 12 || 12;
+    return `${hour12}:${minute} ${ampm}`;
+  }
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
@@ -197,23 +212,23 @@
 
       const caption = `
 	  #${get('category')}Candidate
-👤*Name*:${get('name')} | ${get('category')}
-📅*DOB*: ${get('dob')} at ${get('birthTime')}
-📍*Birth Place*: ${get('birthPlace')}
-📏*Height*: ${get('height')}
-🎓*Education*: ${get('education')}
-💼*Occupation*: ${get('occupation')}
-🌆*Working City*: ${get('workingCity')}
-🏠*Native City*: ${get('nativeCity')}
-🔮*Kundali Milan*: ${get('kundali')}
-🔗*Status*: ${get('status')}
-🧬*Sakha(Self/Nanihal)*: ${get('sakhaSelf')} / ${get('sakhaNanihal')}
-🤝*Partner Preference*: ${get('partnerPref') || "Not specified"}
-📝*Other Details*: ${get('otherDetails') || "N/A"}
+*Name*:${get('name')}
+*DOB*: ${formatDate(get('dob'))} at ${formatTime(get('birthTime'))}
+*Birth Place*: ${get('birthPlace')}
+*Height*: ${get('height')}
+*Education*: ${get('education')}
+*Occupation*: ${get('occupation')}
+*Working City*: ${get('workingCity')}
+*Native City*: ${get('nativeCity')}
+*Kundali Milan*: ${get('kundali')}
+*Status*: ${get('status')}
+*Sakha(Self/Nanihal)*: ${get('sakhaSelf')} / ${get('sakhaNanihal')}
+*Partner Preference*: ${get('partnerPref') || "Not specified"}
+*Other Details*: ${get('otherDetails') || "N/A"}
 
 *Contact*:
-📞 1: ${get('contact1Name')} (${get('contact1Relation')}) - ${get('contact1Mobile')}
-📞 2: ${get('contact2Name')} (${get('contact2Relation')}) - ${get('contact2Mobile')}
+1: ${get('contact1Name')} (${get('contact1Relation')}) - ${get('contact1Mobile')}
+2: ${get('contact2Name')} (${get('contact2Relation')}) - ${get('contact2Mobile')}
       `.trim();
 
       captionDiv.style.display = 'block';
