--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Maheshwari Matrimony Form</title>
+  <title>Maheshwari Candidate Caption Generator</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Cadidate Caption Generator</h2>
+    <h2>Candidate Caption Generator</h2>
     <p class="note"><span class="required">*</span> marked fields are mandatory</p>
 
     <form id="matrimonyForm">
